| Bug #7193 | start backup gives false error printout | ||
|---|---|---|---|
| Submitted: | 11 Dec 2004 12:34 | Modified: | 13 Dec 2004 14:09 |
| Reporter: | Tomas Ulin | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S1 (Critical) |
| Version: | OS: | ||
| Assigned to: | Tomas Ulin | Target Version: | |
[11 Dec 2004 12:34]
Tomas Ulin
